# idris-nix

./: .gitignore  LICENSE  README.adoc  idris-nix.cabal  shell.nix
examples/: fizzbuzz.idr
src/: Main.hs
src/IRTS/: CodegenNix.hs
